Increase player cap; add password reset feature
